# test_work_larixon

./: Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
django_application/apps/api/: urls.py
django_application/apps/api/market/: serializers.py  views.py
django_application/apps/django_common/: models.py
django_application/apps/market/: admin.py  models.py
django_application/apps/market/migrations/: 0001_initial.py
django_application/config/: urls.py
django_application/config/server/: asgi.py  uwsgi.ini  wsgi.py
django_application/config/settings/: base.py
